--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -1004,34 +1004,43 @@ body {
 
 .table {
   width: 100%;
-  padding-bottom: 85px; }
+  padding-bottom: 85px;
+  border-spacing: 0; }
   .table th b {
     color: #009f3c;
-    font-size: 20px;
-    font-family: 'SF UI Display Black', sans-serif; }
+    font-size: 26px;
+    font-family: 'SF UI Display Black', sans-serif;
+    text-transform: uppercase; }
   .table th p {
-    margin-top: 20px;
     color: #fff;
-    font-size: 13px;
-    font-family: 'SF UI Display', sans-serif;
-    opacity: 0.6; }
+    font-size: 16px;
+    font-family: 'SF UI Display', sans-serif; }
   .table th span {
     display: block;
     margin-bottom: 13px;
     color: #fff;
     font-size: 22px;
     font-family: 'SF UI Display Black', sans-serif; }
+  .table tr:nth-child(1n+1) {
+    background: rgba(129, 129, 129, 0.5); }
+  .table tr:nth-child(2n+1) {
+    background: rgba(167, 167, 167, 0.5); }
+  .table tr:first-child {
+    background: transparent; }
   .table td {
-    padding: 10px 0;
+    padding: 10px 20px;
     color: #fff;
     font-size: 18px;
-    font-family: 'SF UI Display Regular', sans-serif; }
+    font-weight: bold;
+    font-family: 'SF UI Text Bold', sans-serif; }
 
 .table__check-g {
-  background: url("../img/check-g.png") no-repeat center; }
+  background: url("../img/check-g.svg") no-repeat center;
+  background-size: 15px; }
 
 .table__check-r {
-  background: url("../img/check-r.png") no-repeat center; }
+  background: url("../img/check-r.svg") no-repeat center;
+  background-size: 15px; }
 
 .table--spread {
   margin: 30px 0;
