--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -72,21 +72,21 @@
           <th></th>
           <th>
             <b>Mini</b>
-            <p>Basic Exchange For Beginners</p><br>
+            <p>Basic Exchange<br>For Beginners</p>
             <span>$500</span>
-            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+            <!-- <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a> -->
           </th>
           <th>
             <b>Classic</b>
-            <p>For Skilled Investors</p><br>
+            <p>For Skilled<br>Investors</p>
             <span>$5000</span>
-            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+            <!-- <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a> -->
           </th>
           <th>
             <b>Premium</b>
             <p>Advanced Transaction<br>For Experienced Investors</p>
             <span>$20000</span>
-            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+            <!-- <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a> -->
           </th>
         </tr>
         <tr>
