--- a/mm/sass/blocks/steps.scss
+++ b/mm/sass/blocks/steps.scss
@@ -1,5 +1,6 @@
 .steps {
-  padding: 70px 0 54px 0;
+  padding: 0 0 50px 0;
+  color: #fff;
   
   h1 {
     margin: 0;
@@ -16,6 +17,11 @@
   p {
     font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7;
+  }
+  
+  hr {
+    width: 70px;
+    margin: 20px 0;
   }
 }
 
