--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -74,19 +74,16 @@
             <b>Mini</b>
             <p>Basic Exchange<br>For Beginners</p>
             <span>$500</span>
-            <!-- <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a> -->
           </th>
           <th>
             <b>Classic</b>
             <p>For Skilled<br>Investors</p>
             <span>$5000</span>
-            <!-- <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a> -->
           </th>
           <th>
             <b>Premium</b>
             <p>Advanced Transaction<br>For Experienced Investors</p>
             <span>$20000</span>
-            <!-- <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a> -->
           </th>
         </tr>
         <tr>
@@ -155,23 +152,35 @@
           <td class="table__check-r"></td>
           <td class="table__check-g"></td>
         </tr>
+        <tr>
+          <td></td>
+          <td>
+            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+          </td>
+          <td>
+            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+          </td>
+          <td>
+            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+          </td>
+        </tr>
       </table>
     </div>
-  </section>
-  <section class="steps">
-    <div class="container">
-      <h1>Steps for opening a MultiplyMarket Trading Profile</h1>
-      <p class="steps__italy">Opening a trading account at MultiplyMarket</p>
-      <hr>
-      <b>1. Pick the account types depending on your objectives and needs</b>
-      <p>Three available account types are supplemented with lots of additional features that bring some extra pluses to the investor. You can easily sign up for any of them. And keep the notice that you can change the account type after putting money on your acc.</p>
-      <hr>
-      <b>2. Fill out the demanded information and  confirm your identity</b>
-      <p>You just need to complete information profile with your personal data and to provide some identity papers.</p>
-      <hr>
-      <b>3. Depositing money into your account</b>
-      <p>Once we approve and authorize your application, you will be able to make your payments and withdrawals swiftly.</p>
-    </div>
+    <section class="steps">
+      <div class="container">
+        <h1>Steps for opening a MultiplyMarket Trading Profile</h1>
+        <p class="steps__italy">Opening a trading account at MultiplyMarket</p>
+        <hr>
+        <b>1. Pick the account types depending on your objectives and needs</b>
+        <p>Three available account types are supplemented with lots of additional features that bring some extra pluses to the investor. You can easily sign up for any of them. And keep the notice that you can change the account type after putting money on your acc.</p>
+        <hr>
+        <b>2. Fill out the demanded information and  confirm your identity</b>
+        <p>You just need to complete information profile with your personal data and to provide some identity papers.</p>
+        <hr>
+        <b>3. Depositing money into your account</b>
+        <p>Once we approve and authorize your application, you will be able to make your payments and withdrawals swiftly.</p>
+      </div>
+    </section>
   </section>
   <section class="payment">
     <div class="container">
