--- a/borsa/sass/blocks/title.scss
+++ b/borsa/sass/blocks/title.scss
@@ -7,7 +7,7 @@
     font-family: 'Open Sans Bold', sans-serif;
   }
   
-  &--account-types {
+  &--accounts {
     background: #eaeaea url('../img/title-acc.jpg') no-repeat bottom;
     background-size: cover;
     
@@ -18,18 +18,14 @@
     // }
   }
   
-  &--mobile {
-    background: #eaeaea url('../img/title-mobile.jpg') no-repeat bottom;
+  &--platforms {
+    background: #eaeaea url('../img/title-platforms.jpg') no-repeat bottom;
     background-size: cover;
   }
   
   &--trade {
-    background: #eaeaea url('../img/title-trade.jpg') no-repeat bottom;
-    background-size: cover;
     
     h1 {
-      // margin: 0;
-      // font-size: 70px;
       font-weight: inherit;
       font-family: 'Open Sans Regular', sans-serif;
       
