--- a/borsa/sass/style.scss
+++ b/borsa/sass/style.scss
@@ -21,3 +21,6 @@
 @import 'blocks/table';
 @import 'blocks/mobile';
 @import 'blocks/trade';
+@import 'blocks/segregated';
+@import 'blocks/meta';
+@import 'blocks/web';
