--- a/borsa/sass/blocks/edge.scss
+++ b/borsa/sass/blocks/edge.scss
@@ -1,11 +1,11 @@
 .edge {
-  padding: 100px 0;
+  padding: 50px 0;
   text-align: center;
   
   h1 {
     margin: 0;
     margin-bottom: 15px;
-    font-size: 70px;
+    font-size: 50px;
     font-family: 'Open Sans Bold', sans-serif;
   }
   
@@ -19,11 +19,12 @@
 .edge__flex {
   display: flex;
   justify-content: space-between;
+  margin: 60px 0 0 0;
 }
 
 .edge__box {
   width: 350px;
-  padding-top: 150px;
+  padding-top: 120px;
   
   b {
     font-family: 'Open Sans Bold', sans-serif;
@@ -32,23 +33,23 @@
   
   p {
     margin-top: 10px;
-    font-size: 18px;
+    font-size: 15px;
     font-family: 'Open Sans', sans-serif;
   }
   
   &--1 {
     background: url('../img/edge-1.svg') no-repeat top;
-    background-size: 120px;
+    background-size: 110px;
   }
   
   &--2 {
     background: url('../img/edge-2.svg') no-repeat top;
-    background-size: 120px;
+    background-size: 90px;
   }
   
   &--3 {
     background: url('../img/edge-3.svg') no-repeat top;
-    background-size: 120px;
+    background-size: 100px;
   }
 }
 
