--- a/borsa/sass/style.scss
+++ b/borsa/sass/style.scss
@@ -24,3 +24,7 @@
 @import 'blocks/segregated';
 @import 'blocks/meta';
 @import 'blocks/web';
+@import 'blocks/glossary';
+@import 'blocks/signal';
+@import 'blocks/faq';
+@import 'blocks/funding';
