--- a/borsa/css/style.css
+++ b/borsa/css/style.css
@@ -528,9 +528,11 @@ body {
   -ms-flex-direction: column;
   flex-direction: column; }
   .form__input input {
-    width: 370px;
+    width: 330px;
     height: 45px;
     margin-bottom: 10px;
+    padding: 0 20px;
+    font-size: 18px;
     border: none;
     border-radius: 10px; }
     .form__input input::-webkit-input-placeholder {
@@ -1194,7 +1196,7 @@ body {
     font-family: 'Open Sans Bold', sans-serif; }
   .assets p {
     font-family: 'Open Sans Regular', sans-serif; }
-  .assets ul {
+  .assets ul, .assets ol {
     font-size: 15px;
     font-family: 'Open Sans Regular', sans-serif; }
   .assets small {
@@ -1202,3 +1204,10 @@ body {
     margin: 10px 0;
     font-size: 14px;
     font-family: 'Open Sans Bold', sans-serif; }
+  .assets a {
+    display: block;
+    margin: 20px 0;
+    color: #3097D1;
+    font-size: 18px;
+    font-family: 'Open Sans Regular', sans-serif;
+    text-decoration: none; }
