--- a/borsa/sass/blocks/assets.scss
+++ b/borsa/sass/blocks/assets.scss
@@ -10,7 +10,7 @@
     font-family: 'Open Sans Regular', sans-serif;
   }
   
-  ul {
+  ul, ol {
     font-size: 15px;
     font-family: 'Open Sans Regular', sans-serif;
   }
@@ -20,5 +20,14 @@
     margin: 10px 0;
     font-size: 14px;
     font-family: 'Open Sans Bold', sans-serif;
+  }
+  
+  a {
+    display: block;
+    margin: 20px 0;
+    color: #3097D1;
+    font-size: 18px;
+    font-family: 'Open Sans Regular', sans-serif;
+    text-decoration: none;
   }
 }
