--- a/borsa/sass/blocks/form.scss
+++ b/borsa/sass/blocks/form.scss
@@ -35,9 +35,11 @@
   flex-direction: column;
   
   input {
-    width: 370px;
+    width: 330px;
     height: 45px;
     margin-bottom: 10px;
+    padding: 0 20px;
+    font-size: 18px;
     border: none;
     border-radius: 10px;
     
