--- a/borsa/sass/blocks/title.scss
+++ b/borsa/sass/blocks/title.scss
@@ -39,6 +39,11 @@
     background: #eaeaea url('../img/title-tools.jpg') no-repeat bottom;
     background-size: cover;
   }
+  
+  &--algo {
+    background: #eaeaea url('../img/title-algo.jpg') no-repeat top;
+    background-size: cover;
+  }
 }
 
 @media screen and ($tablet-widths) {}
